# osin

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  experiments.yml  pyproject.toml  pyproject.toml2  reports.yml
.github/: ci.yml
.github/workflows/: ci.yml
containers/: Dockerfile
examples/: pyproject.toml  run.sh
examples/classification/: main.py
osin/: __main__.py  app.py  config.py  dashboard.py  data_keeper.py  db.py  db_old.py  executor.py  exp_config.py  main.py  migration.py  misc.py  params_parser.py  report.py  repository.py  server.py  worker.py
osin/actor_model/: actor_graph.py  actor_state.py  base_actor.py  cache_helper.py  dataset_helper.py  params_helper.py  params_parser.py  prelude.py
osin/apis/: local_osin.py  osin.py  remote_exp.py  remote_osin.py  remote_osin.v1
osin/controllers/: exp.py  report.py  views.py
osin/formats/: hdf5.py
osin/graph/: base_actor.py  cache_helper.py  params_parser.py
osin/integrations/: ream.py
osin/models/: __init__.py  base.py  dashboard.py  exp.py  exp_data.py  parameters.py  report.py
osin/models/report/: __init__.py  auto_table.py  base_report.py  index_schema.py
osin/types/: param_schema.py  parameters.py  primitive_type.py  pyobject.py  pyobject_type.py
osin/types/pyobject/: __init__.py
osin/ui/: dashboard.py
osin/ui/toggle_list/: __init__.py
osin/ui/www/: package-lock.json  package.json
osin2/ui/www/: package-lock.json
ream/: actor_graph.py  dataset_helper.py  helper.py  params_helper.py  params_parser.py  prelude.py
ream/actors/: base.py  interface.py
scripts/: check_hdf5.py
tests/: conftest.py  import_test.py
tests/apis/: test_local_osin.py
tests/controllers/: conftest.py  test_exp_run.py  test_report.py
tests/graph/: test_params_helper.py
tests/models/: test_parameters.py
tests/types/: test_param_schema.py  test_parameters.py  test_pyobject_type.py
www/: package.json
www/.yalc/gena-app/: package.json  yalc.sig
www/public/: index.html
www/src/: index.css  index.tsx  react-app-env.d.ts  routes.tsx
www/src/misc/: ArrayUtils.ts  (+2 more)
(+108 files in other folders)
