[tool.poetry]
name = "osin"
version = "1.0.0"
description = "Rethink Experimenting"
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
peewee = "^3.15.2"
tornado = "^6.2"
gena = "^1.1.2"
loguru = "^0.6.0"
orjson = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
