[tool.poetry]
name = "osin"
version = "1.3.0"
description = "Research and Experiments"
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
peewee = "^3.15.2"
tornado = "^6.2"
gena = "^1.3.2"
loguru = "^0.6.0"
orjson = "^3.8.0"
h5py = "^3.7.0"
psutil = "^5.9.2"
python-dateutil = "^2.8.2"
python-slugify = "^6.1.2"
t2-yada = "^1.0.0"
filelock = "^3.8.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
